commit on master

--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
         <h1>Orisys India</h1>
         <form action="homeval.php" method="post">
            <label for="email">Email:</label>
-           <input type="email" name="email" palceholder="xyzWgmail.com" required><br>
+           <input type="email" name="email" palceholder="xyz@gmail.com" required><br>
            <label for="password">Password:</label>
            <input type="password" name="password" required>
            <input class="button" type="submit" name="login" value="Login">
